# LoongForge

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  build.sh  ci.yml  index.html  pyproject.toml  requirements.txt  requirements_internal.txt  requirements_opensource.txt  requirements_xpu.txt  setup_env.py  sitemap.xml  xpytorch_info.txt
.claude/: settings.json
.comate/rules/: rules.mdr
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  claude-review.yml  secrets.yml  submodule-sync.yml
aiak_training_omni/: __init__.py  train.py
aiak_training_omni/data/: __init__.py  base_dataset_config.py  chat_templete.py  hf_dataset.py  mm_plugin.py  multimodal_dataset.py  sft_dataset.py  sft_format_utils.py  sft_supervised_utils.py
aiak_training_omni/models/: __init__.py  dispatch.py  factory.py  utils.py
aiak_training_omni/tokenizer/: __init__.py  defaults.py  tokenization_hf.py  tokenizer.py
aiak_training_omni/train/: __init__.py  arguments.py  base_train_config.py  get_loss_func.py  get_position_idx_func.py  initialize.py  parser.py  trainer_builder.py  training_utils.py  validators.py
aiak_training_omni/utils/: __init__.py  config_augments.py  config_map.py  constants.py  global_vars.py  initialize.py  utils.py
assets/css/: style.css
assets/data/: posts.json
assets/js/: blog.js  main.js
baige_omni/: __init__.py  train.py
baige_omni/data/: __init__.py  base_dataset_config.py  blended_hf_dataset_builder.py  blended_hf_dataset_config.py  chat_template.py  hf_dataset.py  kimi_k25_plugin.py  mm_plugin.py  sft_data_collator.py  sft_dataset.py  sft_format_utils.py  sft_supervised_utils.py
baige_omni/models/: __init__.py  dispatch.py  factory.py  utils.py
baige_omni/tokenizer/: __init__.py  defaults.py  tokenization_hf.py  tokenizer.py
baige_omni/train/: __init__.py  arguments.py  checkpointing.py  fp8_dynamic_policy.py  get_loss_func.py  get_position_idx_func.py  initialize.py  megatron_trainer.py  parser.py  trainer_builder.py  training_utils.py  validators.py
baige_omni/utils/: __init__.py  config_map.py  constants.py  global_vars.py  utils.py  xpu_init.py
benchmark/: benchmark_attention_longctx.py  benchmark_attention_longctx.sh
blog/: 2026-05-loongforge-dp-load-balancing.html  2026-05-loongforge-dp-load-balancing.zh.html  2026-05-loongforge-heterogeneous-parallel-training.html  2026-05-loongforge-heterogeneous-parallel-training.zh.html  2026-06-loongforge-groot-n16-acceleration.html  2026-06-loongforge-groot-n16-acceleration.zh.html
configs/: README.md
configs/data/: sft_dataset_config.yaml  sft_extended_dataset_config.yaml  vlm_data.yaml
configs/trainer/: base.yaml
docker/: Dockerfile  Dockerfile.internal  Dockerfile.xpu  Dockerfile.xpu.internal  Dockerfile_base  Dockerfile_community  Dockerfile_opensource  __init__.py  build_base_image.sh  enterpoint.sh  fix_xpytorch_hook.sh  install.sh  install_opensource.sh  pip.conf  sources.list  xpytorch_info.txt
docs/source/: HEADER_GUIDELINES.md  conf.py  faqs.md  index.rst
examples/groot_N1.6/: sft_groot.sh
examples/internvl2.5/: sft_internvl2.5_8b.sh  sft_internvl2_5_26b.sh  sft_internvl2_5_38b.sh  sft_internvl2_5_78b.sh  sft_internvl2_5_8b.sh
examples/qwen_image/: convert_checkpoint_hg2mcore.py  convert_checkpoint_mcore2hg.py  convert_qwen_image.sh  preprocess.sh  pretrain_qwen_image_edit_2511.sh  qwen_image_preprocess.py
examples/wan/: convert_checkpoint_hg2mcore.py  convert_checkpoint_mcore2hg.py  convert_wan2.1sh  convert_wan2.2.sh  pretrain_wan2.1_i2v_14b_480p.sh  pretrain_wan2.2_i2v_a14b.sh  wan2.1_preprocess.py  (+1 more)
loongforge/: __init__.py  train.py
omni_training/: __init__.py  train.py
ops/: README.md  pyproject.toml  requirements.txt
patches/: README.md  apply_patches.sh
tests/: README.md  download_datasets.sh  ipipe_start.sh  main.py  main_start.sh  pipeline_runner.sh  prepare_env.sh  rmsnorm_unittest.py  test_qwen_vl_projector_configs.py
tools/: benchmark_te_parallel_layers.py
(+2799 files in other folders)
