[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OmniTraining"
version = "0.1.0"
description = "OmniTraining framework: an all-scenario training framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "zhanghenghua", email = "zhanghenghua@baidu.com" }
]
keywords = ["baidu", "omni", "training", "megatron"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "build>=1.0.3"
]

[project.optional-dependencies]
test = [
    "pytest",
    "mock"
]

[project.urls]
Homepage = "http://icode.baidu.com/repos/baidu/hac-aiacc/OmniTraining/tree/master"
Changelog = "CHANGELOG.md"

[project.scripts]
OmniTraining = "omni_training.train:main"

[tool.hatch.build]
packages = ["omni_training"]
include = [
    "omni_training/conf/*",
    "omni_training/data/*",
    "omni_training/**/*.yaml",
    "omni_training/**/*.json"
]

[tool.hatch.build.targets.wheel]
packages = ["omni_training"]
output-dir = "output/dist"

[tool.hatch.build.targets.sdist]
output-dir = "output/dist"
