[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BaigeOmni"
version = "0.1.0"
description = "BaigeOmni framework: an all-scenario training framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "zhanghenghua", email = "zhanghenghua@baidu.com" }
]
keywords = ["baidu", "omni", "training", "megatron"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "build>=1.0.3"
]

[project.optional-dependencies]
test = [
    "pytest",
    "mock"
]

[project.urls]
Homepage = "http://icode.baidu.com/repos/baidu/hac-aiacc/BaigeOmni/tree/master"
Changelog = "CHANGELOG.md"

[project.scripts]
BaigeOmni = "baige_omni.train:main"

[tool.hatch.build]
packages = ["baige_omni"]
include = [
    "baige_omni/conf/*",
    "baige_omni/data/*",
    "baige_omni/**/*.yaml",
    "baige_omni/**/*.json"
]

[tool.hatch.build.targets.wheel]
packages = ["baige_omni"]
output-dir = "output/dist"

[tool.hatch.build.targets.sdist]
output-dir = "output/dist"
